--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,7 @@ test:
 production:
   <<: *default
   database: civism_production
-  username: civism
-  password: <%= ENV['CIVISM_DATABASE_PASSWORD'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  host: <%= ENV['DB_HOSTNAME'] %>
+  port: <%= ENV['DB_PORT'] %>
